Section 3.1 (except for the proof)

--- a/doc/paper.bib
+++ b/doc/paper.bib
@@ -301,3 +301,9 @@
   year={2018},
   publisher={CRC Press}
 }
+@book{DBLP:books/sp/Lloyd87,
+  author       = {John W. Lloyd},
+  title        = {Foundations of Logic Programming, 2nd Edition},
+  publisher    = {Springer},
+  year         = {1987}
+}
