--- a/doc/paper.tex
+++ b/doc/paper.tex
@@ -120,7 +120,7 @@ meel@cs.toronto.edu
 
 \todo[inline,caption={}]{
   \begin{itemize}
-    \item 9 pages!!!
+    \item 9 pages including appendices but not acknowledgements
     \item Add some papers mentioned in:
           \begin{itemize}
             \item very recent work
@@ -196,7 +196,7 @@ meel@cs.toronto.edu
   \centering
   \begin{tikzpicture}
     \node at (-1, 0) (formula) {$\phi$};
-    \node[draw,rounded rectangle] at (3, 0) (alg1) {\CompileWithBaseCases};
+    \node[draw,rounded rectangle] at (3, 0) (compilewithbasecases) {\CompileWithBaseCases};
     \node[draw,rounded rectangle] at (9, 0) (compilation) {Compile to C++};
 
     \node[draw,rounded rectangle,dashed] at (12, 0) (cpp) {C++ code};
@@ -204,24 +204,24 @@ meel@cs.toronto.edu
 
     \node at (15, 0) (count) {Model count};
 
-    \node[draw,rounded rectangle] at (3, -2) (alg2) {\FindBaseCases};
-    \node[draw,rounded rectangle,left = 0.1cm of alg2] (crane) {\Crane};
-    \node[draw,rounded rectangle,right = 0.1cm of alg2] (alg3) {\Propagate};
-    \node[draw,rounded rectangle,right = 0.1cm of alg3] (simplify) {\Simplify};
+    \node[draw,rounded rectangle] at (3, -2) (findbasecases) {\FindBaseCases};
+    \node[draw,rounded rectangle,left = 0.1cm of findbasecases] (crane) {\Crane};
+    \node[draw,rounded rectangle,right = 0.1cm of findbasecases] (propagate) {\Propagate};
+    \node[draw,rounded rectangle,right = 0.1cm of propagate] (simplify) {\Simplify};
 
-    \node[draw,fit={(alg1) (compilation) (crane) (alg2) (alg3)},inner ysep=7pt,yshift=5pt] {};
+    \node[draw,fit={(compilewithbasecases) (compilation) (crane) (findbasecases) (propagate)},inner ysep=7pt,yshift=5pt] {};
     \node at (0.2, 0.5) {\Cranetwo};
 
-    \draw[-Latex] (formula) -- (alg1);
-    \draw[-Latex] (alg1) -- node[above] {$\mathcal{E}$} (compilation);
+    \draw[-Latex] (formula) -- (compilewithbasecases);
+    \draw[-Latex] (compilewithbasecases) -- node[above] {$\mathcal{E}$} (compilation);
     \draw[-Latex] (compilation) -- (cpp);
     \draw[-Latex] (sizes) -- (cpp);
     \draw[-Latex] (cpp) -- (count);
 
-    \draw[-Latex,dashed] (alg1) -- node[midway,left] {uses} (crane);
-    \draw[-Latex,dashed] (alg1) -- node[midway,left] {uses} (alg2);
-    \draw[-Latex,dashed] (alg1) -- node[midway,left] {uses} (alg3);
-    \draw[-Latex,dashed] (alg1) -- node[midway,right] {uses} (simplify);
+    \draw[-Latex,dashed] (compilewithbasecases) -- node[midway,left] {uses} (crane);
+    \draw[-Latex,dashed] (compilewithbasecases) -- node[midway,left] {uses} (findbasecases);
+    \draw[-Latex,dashed] (compilewithbasecases) -- node[midway,left] {uses} (propagate);
+    \draw[-Latex,dashed] (compilewithbasecases) -- node[midway,right] {uses} (simplify);
   \end{tikzpicture}
   \caption[]{The outline of using \Cranetwo{} to compute the model count of a
     formula $\phi$. The formula is compiled into a set of equations
@@ -237,8 +237,24 @@ meel@cs.toronto.edu
   }\label{fig:overview}
 \end{figure*}
 
-\todo[inline]{By pointing to the outline in \cref{fig:overview}, make forward
-  references to the sections of the paper.}
+\todo[inline,caption={}]{
+  \begin{itemize}
+    \item By pointing to the outline in \cref{fig:overview}, make forward
+          references to the sections of the paper.
+    \item Somewhere: mention that we're primarily concerned with computing
+          unweighted model counts, but everything trivially extends to the
+          weighted setting as well.
+    \item Introduce greedy search and breadth-first search (BFS), together with
+          \Cranegreedy{} and \Cranebfs{}. The knowledge compilation part of both
+          \textsc{Crane} and \Cranetwo{} can be executed using either greedy
+          (similar to \textsc{ForcLift}) or breadth-first search. We use both in
+          our experiments, denoting them as \Cranegreedy{} and \Cranebfs{},
+          respectively.
+    \item Introduce the WFOMC acronym.
+    \item Introduce first-order knowledge compilation as a class of WFOMC
+          algorithms, defining/mentioning compilation rules, FCG, etc.
+  \end{itemize}
+}
 
 \paragraph{Contributions}
 \begin{itemize}
@@ -437,11 +453,19 @@ $i = 1, \dots, n$.
             |P| = |\Delta|
           \end{gather*}
     \item In \FO:
-          \begin{gather*}
-            \forall x \in \Delta\text{. }\exists y \in \Delta\text{. }P(x, y)\\
-            \forall x, y, z \in \Delta\text{. }P(x, y) \land P(x, z) \Rightarrow y = z
-          \end{gather*}
+    \begin{equation}\label[formula]{eq:fo}
+      \begin{gathered}
+        \forall x \in \Gamma\text{. }\exists y \in \Delta\text{. }P(x, y)\\
+        \forall x \in \Gamma\text{. }\forall y, z \in \Delta\text{. }P(x, y) \land P(x, z) \Rightarrow y = z
+      \end{gathered}
+    \end{equation}
   \end{itemize}
+
+  Note that \cref{eq:fo} is written with two domains instead of one. Clearly,
+  the model count does not change whenever $|\Gamma| = |\Delta|$. As was
+  previously observed by Dilkas and Belle~\shortcite{DBLP:conf/kr/DilkasB23},
+  such a reformulation can help first-order knowledge compilation algorithms
+  find efficient solutions.
 \end{example}
 
 \subsection{Algebra}\label{sec:algebra}
@@ -466,7 +490,7 @@ $f(\mathbf{x}) = \expr{}$, where $f(\mathbf{x})$ is a signature.
 \section{Completing the Definitions of Recursive Functions}\label{sec:main}
 
 \begin{algorithm}[t]
-  \caption{\protect\CompileWithBaseCases{$\phi$}}\label{alg:main}
+  \caption{\protect\CompileWithBaseCases{$\phi$}}\label{alg:compilewithbasecases}
   \KwIn{formula $\phi$}
   \KwOut{set $\mathcal{E}$ of equations}
   $(\mathcal{E}, \mathcal{F}, \mathcal{D}) \gets \Crane{$\phi$}$\;\label{line:first}
@@ -480,9 +504,9 @@ $f(\mathbf{x}) = \expr{}$, where $f(\mathbf{x})$ is a signature.
   }
 \end{algorithm}
 
-\Cref{alg:main} outlines our overall approach for compiling a formula into a set
-of equation that include the required base cases. In short, we first use the
-knowledge compilation algorithm of the original
+\Cref{alg:compilewithbasecases} outlines our overall approach for compiling a
+formula into a set of equation that include the required base cases. In short,
+we first use the knowledge compilation algorithm of the original
 \textsc{Crane}~\cite{DBLP:conf/kr/DilkasB23} to compile the formula into:
 \begin{enumerate*}[label=(\roman*)]
   \item set $\mathcal{E}$ of equations,
@@ -495,8 +519,8 @@ set of base cases that we need to find solutions for. For each base case
 $f(\mathbf{x})$, we identify the formula associated with $f$ and simplify it
 using the \Propagate procedure (described in \cref{sec:simplifying}). The
 algorithm then recurses on these simplified formulas and adds the resulting base
-case equations to $\mathcal{E}$. \Cref{example:overall} explains \cref{alg:main}
-in more detail.
+case equations to $\mathcal{E}$. \Cref{example:overall} explains
+\cref{alg:compilewithbasecases} in more detail.
 
 \begin{example}\label{example:overall}
   Let us consider the following formula (previously examined by Dilkas and
@@ -561,7 +585,7 @@ simpler form above.
 \subsection{Identifying a Sufficient Set of Base Cases}\label{sec:identifying}
 
 \begin{algorithm}[t]
-  \caption{\protect\FindBaseCases{$\mathcal{E}$}}\label{alg1}
+  \caption{\protect\FindBaseCases{$\mathcal{E}$}}\label{alg:findbasecases}
   \KwIn{set $\mathcal{E}$ of equations}
   \KwOut{set $\mathcal{B}$ of base cases}
 
@@ -582,8 +606,9 @@ simpler form above.
   }
 \end{algorithm}
 
-\Cref{alg1} summarises the implementation of \FindBaseCases. For each recursive
-call from a function $f$ to itself, we consider two types of arguments:
+\Cref{alg:findbasecases} summarises the implementation of \FindBaseCases. For
+each recursive call from a function $f$ to itself, we consider two types of
+arguments:
 \begin{enumerate*}[label=(\roman*)]
   \item constants and
   \item arguments of the form $x_{i} - c_{i}$, where $c_{i} \in \mathbb{N}_{0}$
@@ -602,7 +627,7 @@ including) $c_{i}$. \Cref{thm:halting} below motivates this approach.
 
 \todo[inline]{Prove (lots of notes, handwritten and elsewhere)}
 
-\begin{theorem}[Halting]\label{thm:halting}
+\begin{theorem}[Termination]\label{thm:halting}
   Let us assume the following about the input set of equations $\mathcal{E}$:
   \begin{enumerate}
     \item Each function $f$ has exactly one equation with $f$ on the left-hand
@@ -625,15 +650,16 @@ including) $c_{i}$. \Cref{thm:halting} below motivates this approach.
   Then the set of base cases $\mathcal{B}$ returned by
   \FindBaseCases{$\mathcal{E}$} is \emph{sufficient} for $\mathcal{E}$ in the
   following sense. The evaluation of any function call with non-negative
-  arguments halts as long as the evaluation of base cases is prioritised over
-  the corresponding recursive definitions.\footnote{Recall that, as previously
-    discussed, the order in which base cases are considered is immaterial.}
+  arguments terminates as long as the evaluation of base cases is prioritised
+  over the corresponding recursive definitions.\footnote{Recall that, as
+    previously discussed, the order in which base cases are considered is
+    immaterial.}
 \end{theorem}
 
 \subsection{Propagating Domain Size Assumptions}\label{sec:simplifying}
 
 \begin{algorithm}[t]
-  \caption{\protect\Propagate{$\phi$, $\Delta$, $n$}}\label{alg2}
+  \caption{\protect\Propagate{$\phi$, $\Delta$, $n$}}\label{alg:propagate}
   \KwIn{formula $\phi$, domain $\Delta$, $n \in \mathbb{N}_{0}$}
   \KwOut{formula $\phi'$}
   $\phi' \gets \emptyset$\;
@@ -661,13 +687,14 @@ including) $c_{i}$. \Cref{thm:halting} below motivates this approach.
   }
 \end{algorithm}
 
-\Propagate (\cref{alg2}) modifies formula $\phi$ with the assumption that domain
-$\Delta$ has size $n \in \mathbb{N}_{0}$. In the case of $n=0$, many clauses
-become vacuously satisfied and can be removed. In the case of
+\Propagate (\cref{alg:propagate}) modifies formula $\phi$ with the assumption
+that domain $\Delta$ has size $n \in \mathbb{N}_{0}$. In the case of $n=0$, many
+clauses become vacuously satisfied and can be removed. In the case of
 $n > 0$\footnote{None of the formulas considered in this work had $n > 1$.}, we
 perform partial grounding, using constants to replace all variables quantified
-over $\Delta$. \Cref{alg2} considers these two cases separately. For a literal
-or a clause $C$, we write $\Doms(C)$ to denote the set of corresponding domains.
+over $\Delta$. \Cref{alg:propagate} considers these two cases separately. For a
+literal or a clause $C$, we write $\Doms(C)$ to denote the set of corresponding
+domains.
 
 In the case of $n = 0$, consider three types of clauses:
 \begin{enumerate*}[label=(\roman*)]
@@ -726,52 +753,50 @@ should also appear before/after the independent partial grounding node.
 \end{itemize}
 }
 
-\subsection{Smoothing for Base Cases (TODO)}\label{sec:smoothingbase}
+\subsection{Smoothing for Base Cases}\label{sec:smoothingbase}
 
-\todo[inline]{Must include an example of propagating the empty-domain
-  assumption (ideally based on previous examples).}
+In this section, we motivate and describe \cref{line:smoothing1,line:smoothing2}
+of \cref{alg:propagate}. Suppose that \Propagate is called with arguments
+$(\phi, \Delta, 0)$, i.e., we are simplifying formula $\phi$ by assuming that
+domain $\Delta$ is empty. Informally, if there is a predicate $P$ in $\phi$ that
+has nothing to do with domain $\Delta$, the role of smoothing is to preserve all
+occurrences of $P$ even if all clauses with $P$ become vacuously satisfied. We
+note that the approach presented in this section is far from unique and explain
+it via an example below.
 
-\paragraph{Key point.}
-If there is a predicate $P$ that has nothing to do with domain $\Delta$, make
-sure that $P$ remains as part of the formula even if all clauses with $P$ can be
-removed. Which literal is picked on \cref{line:smoothing1} of \cref{alg2} is not
-important because any choice achieves the same goal: constructing a clause that
-mentions the same predicates as $C'$ and is satisfied by any structure.
+\begin{example}\label{example:basecasesmoothing}
+  Let $\phi$ be
+  \begin{align}
+    \forall x \in \Delta\text{. }\forall y, z \in \Gamma&\text{. }Q(x) \lor P(y, z)\label[clause]{eq:example1}\\
+    \forall y, z \in \Gamma'&\text{. }P(y, z)\label[clause]{eq:example2},
+  \end{align}
+  where $\Gamma' \subseteq \Gamma$ is a domain introduced by a compilation rule.
+  Note that, as a relation, $P \subseteq \Gamma \times \Gamma$.
 
-\begin{fact}
-  Assuming that domain $\Delta$ is empty, any clause that contains
-  `$\forall x \in \Delta$' (for any variable $x$) is vacuously satisfied by all
-  structures.
-\end{fact}
+  Let us reason by hand about the model count of $\phi$ when
+  $\Delta = \emptyset$. Predicate $Q$ can only take one value, i.e.,
+  $Q = \emptyset$. The value of $P$ is fixed over $\Gamma' \times \Gamma'$ by
+  \cref{eq:example2} but is allowed to vary freely over
+  $(\Gamma \times \Gamma) \setminus (\Gamma' \times \Gamma')$ since
+  \cref{eq:example1} is vacuously satisfied by all structures. Hence, the right
+  model count should be $2^{|\Gamma|^2 - |\Gamma'|^2}$.
 
-For example, consider the formula
-\begin{gather}
-  \forall x \in \Delta\text{. }\forall y, z \in \Gamma\text{. }P(x) \lor Q(y, z)\label[clause]{eq:example1}\\
-  \forall y, z \in \Gamma'\text{. }Q(y, z)\label[clause]{eq:example2}
-\end{gather}
-and assume that $\Gamma' \subseteq \Gamma$. If we set $|\Delta|$
-to zero and remove clauses with variables quantified over $\Delta$, we get
-\begin{equation}\label[clause]{eq:simplified}
-  \forall y, z \in \Gamma'\text{. }Q(y, z),
-\end{equation}
-but the model count of \cref{eq:simplified} is one. However, the actual model
-count should be $2^{|\Gamma|^2 - |\Gamma'|^2}$. That is, $Q$ as a relation is a
-subset of $\Gamma \times \Gamma$. While \cref{eq:example1} becomes vacuously
-true, \cref{eq:example2} fixes the value of $Q$ over
-$\Gamma' \times \Gamma' \subseteq \Gamma \times \Gamma$. Hence, the number of
-different values that $Q$ can take is
-$|(\Gamma \times \Gamma) \setminus (\Gamma' \times \Gamma')| = |\Gamma|^{2} - |\Gamma'|^{2}$.
+  However, without \cref{line:smoothing2}, \Propagate would simplify $\phi$ to
+  $\forall y, z \in \Gamma'\text{. }P(y, z)$. Here, $P$ is defined as a subset
+  of $\Gamma' \times \Gamma'$. Clearly, this simplified formula has only one
+  model: $\{\, P(y, z) \mid y, z \in \Gamma' \,\}$.
 
-We address this issue by converting clauses with universal quantifiers over the
-empty domain to tautologies, hence retaining all the predicates that have no
-argument assigned to the empty domain. For example, we would convert
-\cref{eq:example1,eq:example2} to
-\begin{gather*}
-  \forall y, z \in \Gamma\text{. }Q(y, z) \lor \neg Q(y, z)\\
-  \forall y, z \in \Gamma'\text{. }Q(y, z).
-\end{gather*}
-The model count returned by this will also consider the truth value of $Q$ over
-$y \in \Gamma \setminus \Gamma'$ or $z \in \Gamma \setminus \Gamma'$.
+  With \cref{line:smoothing2} included, $\phi$ is transformed to
+  \begin{gather*}
+    \forall y, z \in \Gamma\text{. }P(y, z) \lor \neg P(y, z)\\
+    \forall y, z \in \Gamma'\text{. }P(y, z),
+  \end{gather*}
+  which retains the correct model count.
+\end{example}
+
+Note that the choice of $l$ on \cref{line:smoothing1} of \cref{alg:propagate} is
+inconsequential because any choice achieves the same goal: constructing a
+tautological clause that retains the literals in $C'$.
 
 \subsection{Smoothing the FCG (TODO)}
 
@@ -784,6 +809,7 @@ $y \in \Gamma \setminus \Gamma'$ or $z \in \Gamma \setminus \Gamma'$.
             \item their notation
           \end{itemize}
     \item Describe \cref{fig:smoothing1,fig:smoothing2}
+    \item Introduce the compilation rules
   \end{itemize}
 }
 
@@ -792,58 +818,40 @@ $y \in \Gamma \setminus \Gamma'$ or $z \in \Gamma \setminus \Gamma'$.
   \begin{forest}
     for tree={sn edges}
     [$\DR(c \in \Delta)$,name=dr,ellipse,draw,label={right:\textcolor{blue}{3. $\{\, \forall x \in \Delta\text{. }P(x) \,\}$}}
-    [$\land$,ellipse,draw,label={left:\textcolor{blue}{2. $\{\, P(c) \,\}$}},label={right:\textcolor{blue}{6. $\{\, P(c), \forall x \in \Delta\text{. }x \ne c \Rightarrow P(x) \,\}$}},
-    [$P(c)$,rectangle,draw,fill=green!20,label={272:\textcolor{blue}{1. $\{\, P(c) \,\}$}}],
+    [$\land$,ellipse,draw,label={left:\textcolor{blue}{2. $\{\, P(c) \,\}$}},label={right:\textcolor{blue}{6. $\{\, P(c), \forall x \in \Delta\text{. }x \ne c \Rightarrow P(x) \,\}$}}
+    [$P(c)$,rectangle,draw,fill=green!20,label={272:\textcolor{blue}{1. $\{\, P(c) \,\}$}}]
     [$\CR(\Delta' \gets \Delta \setminus \{\, c \,\})$,ellipse,draw,label={87:\textcolor{blue}{5. $\{\, \forall x \in \Delta\text{. }x \ne c \Rightarrow P(x) \,\}$}}
     [$\Reff(\Delta \mapsto \Delta')$,name=ref,ellipse,draw,label={below:\textcolor{blue}{4. $\{\, \forall x \in \Delta'\text{. }P(x) \,\}$}}]
     ]
     ]
     ]
   \end{forest}
-  \caption{An example based on permutation counting (but simplified a lot). The
-    arc from the $\Reff$ node to the $\DR$ node is omitted.}\label{fig:smoothing1}
+  \caption{An example based on bijection counting (but simplified a lot). The
+    arc from the $\Reff$ node to the $\DR$ node is
+    omitted.}\label{fig:smoothing1}
 \end{figure}
 
 \begin{figure}
   \centering
   \begin{forest}
     for tree={sn edges}
-    [$\DR(c \in \Delta)$,name=dr,ellipse,draw,
-    [$P(c)$,rectangle,draw,fill=green!20],
+    [$\DR(c \in \Delta)$,name=dr,ellipse,draw
+    [$\land$,ellipse,draw,dashed,edge=dashed
+    [$P(c)$,rectangle,draw,fill=green!20]
     [$\forall x \in \Delta\text{. }x \ne c \Rightarrow P(x) \lor \neg P(x)$,rectangle,dashed,edge=dashed,draw,fill=blue!20]
+    ]
     ]
   \end{forest}
   \caption{An artificial example of a situation when smoothing nodes need to be
-    added below a $\DR$ node}\label{fig:smoothing2}
+    added below a $\DR$ node. The dashed part is added during
+    smoothing}\label{fig:smoothing2}
 \end{figure}
-
-\begin{algorithm}
-  \caption{Propagate atoms for smoothing across the FCG}\label{alg:smoothing}
-  \SetKwData{changed}{changed}
-  \KwIn{FCG $(V, s, N^+, \tau)$}
-  \KwIn{function $\iota$ that maps vertex types in $\mathcal{T}$ to sets of atoms}
-  \KwIn{functions $\{\,f_t\,\}_{t \in \mathcal{T}}$ that map a list of sets of atoms to a set of atoms}
-  \KwOut{function $S$ that maps vertices in $V$ to sets of atoms}
-  $S \gets \{\, v \mapsto \iota(\tau(v)) \mid v \in V \,\}$\;
-  $\changed \gets \texttt{true}$\;
-  \While{\changed}{
-    $\changed \gets \texttt{false}$\;
-    \ForEach{vertex $v \in V$}{
-      $S' \gets f_{\tau(v)}(\langle S(w) \mid w \in N^+(v) \rangle)$\;
-      \If{$S' \ne S(v)$}{
-        $\changed \gets \texttt{true}$\;
-        $S(v) \gets S'$\;
-      }
-    }
-  }
-\end{algorithm}
 
 Smoothing is a two-step process. First, atoms that are still accounted for in
 the circuit are propagated upwards. Then, at vertices of certain types, missing
 atoms are detected and additional sinks are created to account for them. If left
 unchanged, the first step of this process would result in an infinite loop
-whenever a cycle is encountered. \Cref{alg:smoothing} outlines how the first
-step can be adapted to an arbitrary directed graph.
+whenever a cycle is encountered.
 
 \subsection{Stage 1: Propagating Unit Clauses `Upwards' (TODO)}
 
@@ -861,7 +869,7 @@ step can be adapted to an arbitrary directed graph.
         $\forall x \in \Delta\text{. }X \ne c \Rightarrow \phi(x)$.
   \item[Domain recursion.] Suppose the domain recursion node introduces constant
         $c \in \Delta$. For each unit clause received from the child node,
-        replace each occurrence of $\phi(x)$ or $\forall x \in \Delta\text{.
+        replace each occurrence of $\phi(c)$ or $\forall x \in \Delta\text{.
         } x \ne c \Rightarrow \phi(x)$ with $\forall x \in \Delta\text{.
         }\phi(x)$. This can be seen as a claim about what ground atoms the
         domain recursion node \emph{should} cover (or a temporary assumption).
@@ -894,10 +902,6 @@ nodes. However, for domain recursion we must do the following.
 
 \todo[inline]{Can I formally define what is meant by `difference'?}
 
-\todo[inline]{Somewhere: mention that we're primarily concerned with computing
-  unweighted model counts, but everything trivially extends to the weighted
-  setting as well.}
-
 \section{Generating C++ Code}\label{sec:cpp}
 
 In this section, we describe the last step of \Cranetwo{} outlined in
@@ -922,14 +926,20 @@ $\expr{}$, store the result in the cache, and return it.
 
 \section{Experimental Evaluation (TODO)}
 
-Comparing \Cranetwo{} and \textsc{FastWFOMC} on a larger set of benchmarks is
-challenging because there is no automated way to translate a formula in \FO{} or
-\Ctwo{} into \UFO{} (or even check if such an encoding is possible).
+We compare \Cranetwo{} (in both BFS and greedy modes) with \textsc{FastWFOMC}
+and \textsc{ForcLift} on two problems previously considered by Dilkas and
+Belle~\shortcite{DBLP:conf/kr/DilkasB23}: the function-counting problem from
+\cref{example:functions} and the bijection-counting problem described below.
+Note that comparing \Cranetwo{} and \textsc{FastWFOMC} on a larger set of
+benchmarks is challenging because there is no automated way to translate a
+formula in \FO{} or \Ctwo{} into \UFO{} (or even check if such an encoding is
+possible). The experiments were run on an AMD~Ryzen~7~5800H processor with
+\SI{16}{\gibi\byte} of memory and Arch Linux~6.8.2-arch2-1 operating system.
+\textsc{FastWFOMC} was executed using Python~3.8.19 with Python-FLINT~0.5.0.
 
 \paragraph{Benchmarks (probably for supplementary material).}
 \begin{itemize}
-  \item Functions (\cref{example:functions})
-  \item Permutations
+  \item Bijections
         \begin{itemize}
           \item In \Ctwo:
                 \begin{gather*}
@@ -943,44 +953,18 @@ challenging because there is no automated way to translate a formula in \FO{} or
                   |P| = |\Delta|
                 \end{gather*}
                 with weights $w^{-}(R) = w^{-}(S) = -1$
-          \item In \FO:
-                \begin{gather*}
-                  \forall x \in \Delta\text{. }\exists y \in \Delta\text{. }P(x, y)\\
-                  \forall y \in \Delta\text{. }\exists x \in \Delta\text{. }P(x, y)\\
-                  \forall x, y, z \in \Delta\text{. }P(x, y) \land P(x, z) \Rightarrow y = z\\
-                  \forall x, y, z \in \Delta\text{. }P(x, y) \land P(z, y) \Rightarrow x = z
-                \end{gather*}
-          \item NOTE: when it's the same domain, counting bijections,
-                injections, surjections, and partial surjections all boil down
-                to the same integer sequence.
+          \item In \FO: see \cref{example:overall}
         \end{itemize}
 \end{itemize}
-
-\todo[inline]{ If it is possible to rewrite a formula to have more sorts, we do
-  that. Explain in more detail and with an example. Mention that this has been
-  observed previously by my previous work (i.e., linear vs cubic complexity). }
-
-\paragraph{Setup.}
-\begin{itemize}
-  \item The experiments were run on an AMD~Ryzen~7~5800H processor with
-        \SI{16}{\gibi\byte} of memory and Arch Linux~6.8.2-arch2-1 operating
-        system. \textsc{FastWFOMC} was run using Python~3.8.19 with
-        Python-FLINT~0.5.0.
-  \item The knowledge compilation part of both \textsc{Crane} and \Cranetwo{}
-        can be executed using either greedy (similar to \textsc{ForcLift}) or
-        breadth-first search. We use both in our experiments, denoting them as
-        \Cranegreedy{} and \Cranebfs{}, respectively.
-\end{itemize}
-
-\todo[inline]{\Cranebfs{} must be introduced earlier (in the introduction?)}
 
 \begin{figure}
   \centering
   \input{plot}
-  \caption{The runtime data of WFOMC algorithms on permutation- and
-    function-counting problems on domains of sizes $1, 2, \dots, 35$. Note that
-    the $y$ axis is on a logarithmic scale.}\label{fig:plot}
+  \caption{The runtime data of WFOMC algorithms on domains of sizes
+    $1, 2, \dots, 35$. Note that the $y$ axis is on a logarithmic
+    scale.}\label{fig:plot}
 \end{figure}
+% TODO: rename permutations to bijections in the plot
 
 \paragraph{Results.}
 \begin{itemize}
@@ -988,7 +972,7 @@ challenging because there is no automated way to translate a formula in \FO{} or
         algorithms remain practically constant in contrast to the rapidly
         increasing runtimes of \textsc{FastWFOMC}.
   \item Note that \Cranebfs{} is able to handle more instances than
-        \textsc{ForcLift} (e.g., the permutation-counting problem in our
+        \textsc{ForcLift} (e.g., the bijection-counting problem in our
         experiments and other problems in my previous work).
   \item Although the search/compilation part is slower in \Cranetwo{} than in
         \textsc{ForcLift}, the difference is negligible.
@@ -1004,9 +988,9 @@ challenging because there is no automated way to translate a formula in \FO{} or
         and reuse the resulting C++ program for all domain sizes.
   \item As another point of comparison,---in at most
         \SI{41}{\second}---\Cranetwo{} scales up to domains of sizes \num{e4}
-        and \num{3e5} in permutation- and function-counting problems,
-        respectively (whereas \textsc{FastWFOMC} already takes longer with
-        domains of sizes\dots)
+        and \num{3e5} in bijection- and function-counting problems, respectively
+        (whereas \textsc{FastWFOMC} already takes longer with domains of
+        sizes\dots)
 \end{itemize}
 
 \todo[inline]{maybe examine \textsc{ForcLift}'s scalability as well}
@@ -1037,7 +1021,7 @@ challenging because there is no automated way to translate a formula in \FO{} or
   \begin{itemize}
     \item Maybe add some complete examples of C++ programs in the supplementary
           material.
-          \item Later on:
+    \item Later on:
           \begin{itemize}
             \item Eliminate (e.g., Emacs) warnings.
             \item must run it by all 3 other coauthors
@@ -1050,6 +1034,10 @@ challenging because there is no automated way to translate a formula in \FO{} or
                   constants associated with it?
             \item consider turning small sections (e.g., Section 5) into
                   subsections of even paragraphs.
+            \item Authors may submit a separate PDF with additional information
+                  supporting their claims (such as proof details, additional
+                  experimental results, further details on experimental design,
+                  etc).
           \end{itemize}
   \end{itemize}
 }
