The introductory part of Section 4

--- a/doc/paper.bib
+++ b/doc/paper.bib
@@ -307,3 +307,13 @@
   publisher    = {Springer},
   year         = {1987}
 }
+@article{darwiche2001tractable,
+  title={On the tractable counting of theory models and its application to truth maintenance and belief revision},
+  author={Darwiche, Adnan},
+  journal={Journal of Applied Non-Classical Logics},
+  volume={11},
+  number={1-2},
+  pages={11--34},
+  year={2001},
+  publisher={Taylor \& Francis}
+}
